# epublib

./: LICENSE.txt  README.md  pyproject.toml
epublib/: reader.py
tests/: filesystem.py
tests/data/: minimal_constants.py
tests/reader/: test_minimal.py
